--- a/installations/templates/installations/traffic/dashboard.html
+++ b/installations/templates/installations/traffic/dashboard.html
@@ -17,6 +17,10 @@
                            value="{{ selected_date|date:'Y-m-d' }}"
                            onchange="this.form.submit()">
                 </form>
+                <a href="{% url 'installations:mission_list' %}"
+                   class="btn btn-info text-white me-2">
+                    <i class="fas fa-list-ul me-1"></i> مهام الحركة
+                </a>
                 <button type="button"
                         class="btn btn-primary"
                         data-bs-toggle="modal"
